--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@react-navigation/elements": "^2.6.3",
     "@react-navigation/native": "^7.1.8",
     "axios": "^1.13.2",
+    "decode": "^0.3.0",
     "expo": "~54.0.30",
     "expo-constants": "~18.0.12",
     "expo-device": "~8.0.10",
@@ -33,6 +34,7 @@
     "expo-symbols": "~1.0.8",
     "expo-system-ui": "~6.0.9",
     "expo-web-browser": "~15.0.10",
+    "jwt-decode": "^4.0.0",
     "lucide-react-native": "^0.562.0",
     "nativewind": "^4.2.1",
     "prettier-plugin-tailwindcss": "^0.5.14",
